spec prototyping
